--- a/src/i18n/translations/ptBR.json
+++ b/src/i18n/translations/ptBR.json
@@ -9,7 +9,7 @@
     "habilities2": "React JS",
     "habilities3": "Next JS",
     "aboutTitle": "Sobre mim",
-    "about": "Atuar como Desenvolvedor Front-end, contribuindo para o desenvolvimento de interfaces modernas, performáticas e centradas no usuário, além de agregar valor com automações e soluções criativas.",
+    "about": "Sou desenvolvedor frontend com foco em interfaces modernas, acessíveis e responsivas. Trabalho com React, Next.js e Tailwind, unindo tecnologia e design em experiências digitais intuitivas. No tempo livre, gosto de video-games, estudar animações, ouvir música e explorar design minimalista.",
     "nameAbout": "Nome",
     "yearAbout": "Ano",
     "locAbout": "Localização",
@@ -26,10 +26,15 @@
     "contactFormMenssage": "Mensagem",
     "contactFormSubmit": "Enviar",
     "portfolioComplete": "Concluído",
+    "projectComplete": "Projeto concluído",
     "portfolioPersonal": "Pessoal",
+    "projectPersonal": "Projeto Pessoal",
     "portfolioOnGoing": "Em andamento",
+    "projectOnGoing": "Projeto em andamento",
     "portfolioStudy": "Estudo",
+    "projectStudy": "Projeto de estudo",
     "portfolioFreelance": "Freelance",
+    "projectFreelance": "Projeto de freelance",
     "easyBankDescription": "Landing page responsiva para o banco fictício EasyBank, criada como desafio front-end usando React, com foco em design moderno e performance.",
     "adviceDescription": "Aplicação simples e responsiva que gera conselhos aleatórios, desenvolvida como projeto pessoal usando React e styled-components, com foco em design clean e integração com API.",
     "tipCalculatorDescription": "Calculadora de gorjetas responsiva desenvolvida como projeto pessoal em React, com ênfase em design intuitivo e cálculos precisos em tempo real.",
